Initialize plan for fixing NullPointerException issues in Vaadin views
Co-authored-by: Prince-Obiuto <152011741+Prince-Obiuto@users.noreply.github.com>